--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,561 +1,86 @@
-@import "vars.css";
-@import "normalize.css";
-
-/* Layout */
-.contour {
-    border: 0em;
-    height: 0.0625rem;
-    background-color: white;
-}
-
-.site-container {
-    margin: auto;
-    max-width: 45rem;
-    background-color: white;
-    border-radius: 0.625em;
-    border: 0.02em solid;
-    border-color: rgb(25, 27, 127);
-    padding: 2em 1.5em;
-}
-
-.site-container_front {
-    margin: auto;
-    padding: auto;
-    max-width: 45rem;
-}
-
-/* Layout-Header */
-
-.header-container {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    padding-top: 22px;
-    left:0;
-    right:0;
-    width: 100% ;
-}
+import React, { Component } from "react";
+import { Link } from "gatsby";
+import { ThemeToggler } from "gatsby-plugin-dark-mode";
 
 
-@media (max-width: 540px) 
-
-{
-
-    .header-container {
-        flex-wrap: wrap;
-    }
-
-    #header-nav-first {
-        margin-left: 0em;
-    }
-}
-
-.header-menu-bar {
-    display: flex;
-    position: fixed;
-    align-items: baseline;
-    text-align: center;
-    width: 100%;
-    background-color: rgb(202, 255, 204);
-    color: rgb(96, 96, 96);
-    float: left;
-    left: 0;
-    right: 0;
-    margin-top: -1em;
-    padding-top: 0.02em;
-    height: 43px;
-    border: 0 0.0625em 0  solid var(--color-postcard);
-    box-shadow: 0 0.0625rem 0em var(--color-postcard);
- 
-}
-
-.header-menu-bar a {
-    text-decoration: none;
-    color: rgb(96, 96, 96);
-    align-items: center;
-    text-align: center;
-}
-
-.header-menu-bar div::selection,
-.header-menu-bar a::selection {
-    background: transparent;
-}
-
-.header-title {
-    white-space: nowrap;
-    visibility: visible;
-    align-items: center;
-    align-content: center;
- 
-}
-
-.nav-container {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    font-size: 0.875em;
-}
-
-.header-nav {
-    list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    padding: 0em;
-    margin-left: 0.8em;
-}
-
-.header-link {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    padding: 0em;
-    margin-right: 0.8em;
-}
-
-.header-nav li {
-    margin-left: 1.5em;
-}
-
-.header-link li {
-    margin-left: 1.5em;
-}
-
-.tog-checkbox {
-    display: none;
-}
-.tog-text {
-    cursor: pointer;
-}
-
-#aside-bar {
-    background-color: transparent;
-    position: absolute;
-    width: 31px;
-    height: auto;
-    display: block;
-    writing-mode: vertical-rl;
-    color: white;
-    top: 7%;
-    bottom: 0;
-    padding-top: 40px;
-    right:0;
-    float:left;
-    cursor: pointer;
-    font-size: 0.875em;
-  }
-
-#aside-bar a {
-    text-decoration: none !important;
-    color: white;
-   }
-
-
-#aside-bar li ul {
-
-    list-style: none !important;
-    text-decoration: none !important;
-    padding: 0;
-    margin-bottom: 20px;
-    color: white;
-
-}
-
-#aside-bar li ul a {
-    list-style: none !important;
-    text-decoration: none !important;
-}
-
-#aside-bar:hover li ul {
-    list-style: none !important;
-    text-decoration: none !important;
-   }
-
-#top-btn {
-    background-color: rgb(202, 255, 204);
-    position: fixed;
-    width: 31px;
-    height: auto;
-    display: block;
-    writing-mode: vertical-rl;
-    color: rgb(25, 27, 127);
-    right: 0;
-    bottom: 0;
-    padding: 1;
-    float:left;
-    cursor: pointer;
-    font-size: 0.875em;
-  }
-
-#aside-bar a {
-    text-decoration: none !important;
-    color: rgb(25, 27, 127);
-   }
-
-
-#aside-bar li ul {
-
-    list-style: none !important;
-    text-decoration: none !important;
-    padding: 0;
-    margin-bottom: 20px;
-    color: rgb(25, 27, 127);
-
-}
-
-#aside-bar li ul a {
-    list-style: none !important;
-    text-decoration: none !important;
-}
-
-#aside-bar:hover li ul {
-    list-style: none !important;
-    text-decoration: none !important;
-   }
-
-/* Layout-Footer */
-.footer-copyright {
-    text-align: center;
-    font-size: 0.875em;
-    margin-bottom: 40px;
-    padding-bottom: 22px;
-    color: white;
-}
-
-.footer-gatsby {
-    text-decoration: none;
-    color: white;
-}
-#footer {
-    position: fixed;
-    height: 43px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-	padding-top: 0px;
-    margin-top: 30px;
-    margin-bottom: -0.09em;
-	color: black;
-	background-color:rgb(178, 178, 178);
-    display: block;
-}
-
-#footer li ul {
-
-    list-style: none;
-    padding: 0;
-    margin-bottom: 20px;
-    color: black;
-}
-
-#footer li {
-
-    list-style: none;
-    float: left;
-    font-size: 16px;
-    padding: 12px 14px 14px 14px;
-    color: black;
-    border-right: 1px solid rgba(0,0,0,0.4);
-    background-color: rgb(178, 178, 178);
-}
-
-#footer li:hover {
- 
-    background-color: rgb(202, 255, 204);
-
-}
-
-#footer li ul.dropupMenu{
-
-    display: none;
-
-}
-
-#footer li:hover ul.dropupMenu{
-
-    display: block;
-    position: absolute;
-    margin: 0 0 0 -15px;
-    border: 1px solid rgb(0,0,0);
-    border-bottom: none;
-    background: rgba(0,0,0,0.5);
-
-}
-
-#footer li:hover li {
-
-float: none;
-border: none;
-border-bottom: 1px solid rgb(0,0,0);
-padding: 12px 10px 12px 10px;
-color: black;
-
-}
-
-.footerbtn1{
-    color: black;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    background-color: transparent !important;
-}
-
-.footerbtn2{
-    color: black;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    background-color: transparent !important;
-}
-
-.footerbtn3{
-    color: black;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    background-color: transparent !important;
-}
-
-.dropup {
-position: relative;
-display: inline-block;
-}
-.dropup-content1 {
-    display: none;
-    position: absolute;
-    bottom: 47px;
-    background-color: rgb(178, 178, 178);
-    color: black;
-    min-width: 160px;
-    width: 160px;
-    z-index: 1;
-  }  
-  .dropup-content2 {
-    display: none;
-    position: absolute;
-    bottom: 47px;
-    background-color: rgb(178, 178, 178);
-    color: black;
-    min-width: 160px;
-    width: 160px;
-    margin-left: 135px;
-    z-index: 1;
-  }  
-
-  .dropup-content3 {
-    display: none;
-    position: absolute;
-    bottom: 47px;
-    background-color: rgb(178, 178, 178);
-    color: black;
-    min-width: 160px;
-    width: 160px;
-    margin-left: 270px;
-    z-index: 1;
-  }
+class Layout extends Component {
   
-.dropup-content1 a .dropup-content2 a .dropup-content3 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  render() {
+    const { title, children} = this.props
+    const toggler = (
+      <div className="toggler">
+        <ThemeToggler>{({ theme, toggleTheme }) => (
+          <label className="tog">
+            <input
+              type="checkbox"
+              onChange={e =>
+                toggleTheme(e.target.checked ? "dark" : "light")
+              }
+              checked={theme === "dark"}
+              className="tog-checkbox"
+            />
+          </label>
+        )}</ThemeToggler>
+      </div>
+    )
+
+    return (
+      <div className="site-container_front">
+      <div className="header-menu-bar">
+        <div className="nav-container">
+            <ul className="header-nav">
+              <li id="header-nav-first"><Link to={`/tags`}>Tags</Link></li>
+              <li><Link to={`/search`}>Search</Link></li>
+              <li>{toggler}</li>
+            </ul>
+            <ul className="header-link">
+              <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                GitHub</a></li>
+              <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                LinkedIn</a></li>
+            </ul>
+          </div>
+      </div>
+      <div className="header-container">
+        <Link
+            className="header-title"
+            to={`/`}
+          >
+              <img
+    src={ require('../components/header-logo_3.png') }
+    width='219px'
+    height='229px'/>
+       </Link>
+       </div>
+
+       <div ID="aside-bar">
+       <li><a href="https://github.com/">2009-2015</a>/<a href="https://github.com/">2015-2017</a>/<a href="https://github.com/">2017-2020</a>/<a href="https://github.com/">2021-</a>
+</li>
+<li>
+  <a href="https://github.com/">2009-2015</a>/<a href="https://github.com/">2015-2017</a>/<a href="https://github.com/">2017-2020</a>/<a href="https://github.com/">2021-</a>
+</li>
+<li>
+  <a href="https://github.com/">2009-2015</a>/<a href="https://github.com/">2015-2017</a>/<a href="https://github.com/">2017-2020</a>/<a href="https://github.com/">2021-</a>
+</li>
+<li>
+  <a href="https://github.com/">2009-2015</a>/<a href="https://github.com/">2015-2017</a>/<a href="https://github.com/">2017-2020</a>/<a href="https://github.com/">2021-</a>
+</li>
+          </div>
+          <div ID="top-btn" onClick="window.scrollTo(0,0);">
+        <li><a href="#">TOP</a></li>
+      <main>{children}</main>
+
+        <footer className="footer-copyright">
+          © {new Date().getFullYear()} {title}, Built with
+          {` `}
+          <a className="footer-gatsby" href="https://www.gatsbyjs.org">Gatsby</a>
+        </footer>
+      
+      </div>
+      </div>
+    )
   }
-
-
-  /* Change color of dropup links on hover */
-.dropup-content1 .dropup-content2 .dropup-content3  a:hover {
-    background-color: rgb(202, 255, 204);
-}
-
-/* Show the dropup menu on hover */
-.dropup:hover .dropup-content .dropup-content1 .dropup-content2 .dropup-content3 {
-  display: block;
 }
 
 
-/* Change the background color of the dropup button when the dropup content is shown */
-.dropup:hover .dropbtn {
-}
-
-/* Postcard*/
-.post-card {
-    border: 0.1em solid var(--color-postcard);
-    border-radius: 0.3em;
-    margin-top: 0.5em;
-    margin-bottom: 1.5em;
-    padding: 2em 1.5em;
-    cursor: default;
-    background-color: white;
-}
-
-.post-card h1 {
-    font-size: 2em;
-    margin-top: 0em;
-    margin-bottom: 0em;
-    letter-spacing: -0.025em;
-}
-.post-card a {
-    text-decoration: none;
-    color: inherit;
-}
-.post-card p {
-    margin-bottom: 0em;
-    margin-top: 0.75em;
-
-    
-}
-.post-card small {
-    font-size: 0.8125em;
-}
-.post-card img {
-    margin-top: 0.75em;
-    width: 100%;
-}
-
-
-.tag-item {
-    margin-right: 0.375em;
-}
-
-
-.post-header {
-    text-align: center;
-}
-.post-header h1 {
-    font-size: 3em;
-    letter-spacing: -0.025em;
-    margin-top: 0.8125em;
-    margin-bottom: 0em;
-    
-}
-.post-header p {
-    font-size: 0.8125em;
-    margin-top: 0.8125em;;
-}
-
-.search-box-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.search-box {
-    margin: 2em auto;
-    width: 35%;
-    border-radius: 0.625em;
-    border: 0.0625em solid var(--color-font);
-    padding: 0.8125em;
-    font-family: inherit;
-    color: inherit;
-    background-color: white;
-    
-}
-.search-box:focus {
-    outline: none;
-}
-.search-box::placeholder {
-    color: var(--color-gray-1);
-}
-
-.tag-archive-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.tag-archive-item {
-    border: 0.0625em solid var(--color-postcard);
-    border-radius: 0.3em;
-    margin: 0.5em;
-    padding: 0.2em 0.6em;
-    background-color: white;
-    
-}
-.tag-archive-link {
-    text-decoration: none;
-    color: inherit;
-}
-
-.pagenator {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1em;
-    font-size: 0.875em;
-    color: white;
-}
-.pagenator-link svg {
-    fill: var(--color-font);
-}
-.pagenator-unlinked svg {
-    fill: transparent;
-}
-.pagenator div::selection,
-.pagenator a::selection {
-    background: transparent;
-    color: white;
-}
-
-.pagenator svg {
-    width: 0.75rem;
-    height: 0.75rem;
-}
-
-.post-card-readmore {
-    margin-top: 0.375rem;
-    font-size: 0.875em;
-    color: var(--color-blue);
-}
-.post-card-readmore span::selection {
-    background: transparent;
-}
-.post-card-readmore a:hover {
-    text-decoration: underline;
-}
-.post-card-readmore svg {
-    width: 0.5rem;
-    height: 0.5rem;
-    margin-left: 0.125rem;
-    fill: var(--color-blue);
-}
-
-.post-nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
-    padding: 0;
-    font-size: 1.125em;
-    color: white;
-}
-.post-nav ::selection {
-    background: transparent;
-    color: white;
-}
-.post-nav a {
-    text-decoration: none;
-    color: white;
-    display: flex;
-    align-items: baseline;
-}
-.post-nav svg {
-    width: 0.8125rem;
-    height: 0.8125rem;
-    fill: var(--color-font);
-}
-.post-nav-prev {
-    margin-left: 0.125rem;
-    color: white !important;
-}
-.post-nav-next {
-    margin-right: 0.125rem;
-    color: white !important;
-}
-
-article .tag-container {
-    text-align: right;
-}
-
-article .tag-container a {
-    text-decoration: none;
-    color: inherit;
-    font-size: 0.875em;
-}
+export default Layout
